--- a/web/.env.production
+++ b/web/.env.production
@@ -1,3 +1,3 @@
 # Production API URL - Update this with your deployed backend URL
-NEXT_PUBLIC_API_URL=https://inboxinvader-production.up.railway.app
+# NEXT_PUBLIC_API_URL=https://your-backend.onrender.com
 NEXT_PUBLIC_API_URL=http://localhost:5000
